[WFCORE-3877] Configurable interface for custom components optional